<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">数据管理器</string>
	<string name="report_name">操作报告</string>

	<string name="tab_app_title">应用列表</string>
	<string name="tab_bak_title">已备份</string>
	<string name="tab_help_title">使用帮助</string>
	<string name="tab_about_title">关于本软件</string>

	<string name="hint_list">输入关键字可进行过滤</string>

	<string name="backuping">正在备份: </string>
	<string name="restoring">正在还原: </string>

	<string name="btn_backup_pure">备份</string>
	<string name="btn_restore_pure">还原</string>
	<string name="btn_backup" formatted="false">备份(%d)</string>
	<string name="btn_restore" formatted="false">还原(%d)</string>
	<string name="btn_filter">搜索</string>
	<string name="btn_clear">清除选择</string>

	<string name="rep_bak_succ">备份成功</string>
	<string name="rep_res_succ">还原成功</string>
	<string name="rep_bak_fail">备份失败</string>
	<string name="rep_res_fail">还原失败</string>
	<string name="rep_bak_na">无需备份</string>

	<string name="mi_settings">系统设置</string>
	<string name="mi_about">使用说明</string>

	<string name="no_root">您的设备没有 root 权限，无法使用本工具</string>
	<string name="no_busybox">您的设备没有 busybox，无法使用本工具</string>
	<string name="no_sdcard">没有找到可用的 SD 卡，无法使用本工具</string>
	<string name="no_name">&lt;未知名称的应用&gt;</string>

	<string name="root_full">您的设备有完整的 ROOT 权限</string>
	<string name="root_half">您的设备 ROOT 权限不完整，可能会对使用造成一定影响</string>
	<string name="root_na">您的设备没有 ROOT 权限，无法使用本软件</string>

	<string name="busybox_full">您的设备有 Busybox，可以正常使用本软件</string>
	<string name="busybox_na">您的设备没有 Busybox，无法使用本软件</string>

	<string name="backup_ok">备份成功</string>
	<string name="backup_fail">备份失败</string>
	<string name="backup_exists">已有备份，不再重复操作</string>
	<string name="restore_ok">还原成功</string>
	<string name="restore_fail">还原失败</string>

	<string name="hint">提示</string>
	<string name="ok">确定</string>
	<string name="cancel">取消</string>

	<string name="confirm_delete">确定要删除选定的软件备份数据吗？</string>

	<string name="pref_bs_title">备份还原设置</string>

	<string name="pref_override">允许重复备份</string>
	<string name="pref_override_son">对于已备份过的应用，用新数据取代老数据</string>
	<string name="pref_override_soff">不再备份已经备份过的应用数据</string>

	<string name="pref_apk">重新安装 APK</string>
	<string name="pref_apk_son">还原数据时，同时重新安装 APK</string>
	<string name="pref_apk_soff">仅还原数据，不重新安装 APK</string>

	<string name="pref_check_root">检查 ROOT 权限</string>
	<string name="pref_check_busybox">检查 Busybox</string>

	<string name="app_title">盛大数据管理器 v1.0.0</string>
	<string name="app_credit">橙子Infinity</string>
	<string name="credit_weibo">微博: </string>
	<string name="credit_blog">博客: </string>
	<string name="credit_mail">邮件/Gtalk: </string>
	<string name="credit_weibo_url">http://weibo.com/rarnu</string>
	<string name="credit_blog_url">http://blog.sina.com.cn/rarnu</string>
	<string name="credit_mail_url">rarnu1985@gmail.com</string>
</resources>
